         authors: Brian G. Woolley and Gilbert L. Peterson
         published: Journal of Intelligent and Robotic Systems, vol 55,
                    no 2, pp 155-176, 2009

--------------------------------------------------------------------------------
basic

   Float classs
      -- Only providing constructors for LCreal defined as double

   Number classs
      -- Only providing constructors for LCreal defined as double

   Rng class
      1) Modified the following functions: drawClosed(), drawOpen(), drawHalfOpen(),
      drawRayleigh(), and drawHalfOpen53()

      2) Added the following functions: drawExponential(), drawGeometric(), drawUniformCont(),
      drawUniformDisc(), drawGauss(), drawBernoulli(), drawBinomial(), drawPoisson(),
      drawGamma() and drawErlang()

      3) Moved inline functions to new Rng.inl file

   support.cpp
      1) lcStrcat() modified to return false if a non-terminated string is passed
      in the destination buffer; destination buffer is not modified.

      2) lcString() modified to no longer put a zero at one byte beyond the end
      of the destination buffer when the destination buffer is either full or
      non-terminated. (bug fix).

      3) Added new functions, lcStrcpyFull(), lcStrncpyFull() and lcStrcatFull(),
      that fail (return false) if the destination buffer is too small.

--------------------------------------------------------------------------------
basicGL

   AnalogGauge class
      -- updated drawing code

   Graphic class
      1) processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

      2) Only provides the 'lc' functions for LCreal defined as double

      3) Added line stipple feature

   SymbolLoader
      -- various functions -- call Component::processComponents() instead of
      BaseClass::processComponents()

--------------------------------------------------------------------------------
dis

   EmitterBeamData